fix alignment

--- a/assets/sass/site/_common-structure.scss
+++ b/assets/sass/site/_common-structure.scss
@@ -87,7 +87,7 @@ body {
     	min-height: 400px;
     }
     @media screen and (min-width: $largewidth) {
-    	min-height: 700px;
+    	min-height: 600px;
     }
 }
 section.header {
@@ -152,7 +152,7 @@ section.divider {
 		width: 80%;
 		max-width: 1150px;
 		margin: -150px auto 0 auto;
-		padding: 40px;
+		padding: 30px;
 		background-color: #fff;
 		position: relative;
 		z-index: 100;
@@ -165,6 +165,7 @@ section.divider {
 		width: auto;
 		display: inline-block;
 		position: relative;
+		margin: 20px 0;
 		&:after {
 			content: '';
 			border-bottom: 3px solid $color-green;
@@ -254,7 +255,7 @@ section.companies {
 				width: 100%;
 				text-align: center;
 				color: #fff;
-				padding: 20px 0;
+				padding: 5px 0;
 				@media screen and (min-width: $tabwidth) {
 					padding: 5px 0;
 				}
